--- a/src/main/resources/templates/resource-add.html
+++ b/src/main/resources/templates/resource-add.html
@@ -18,7 +18,7 @@
 
 
   <h1 class="text-center mt-2"><span class="badge badge-pill badge-dark">Add Resource</span></h1>
-  <div class="d-flex justify-content-center align-items-center ">
+  <div class="d-flex justify-content-center align-items-center mx-auto w-50">
     <form action="#" class="mx-auto w-50 bg-blur rounded p-4"
           th:action="@{/courses/{id}/resources/add(id=${id})}"
           th:object="${resource}" method="post">
