--- a/src/main/resources/templates/student-view.html
+++ b/src/main/resources/templates/student-view.html
@@ -17,19 +17,27 @@
 
 <div class="profile-info" align="center">
 
+  <img th:src="${student.getProfilePicURL()}" alt="No picture available" class="profile-picture" id="profilePic">
+
+  <form th:if="${viewerId}==${student.id}" th:action="@{/students/{id}/upload-picture(id=${student.id})}" th:method="post" enctype="multipart/form-data" class="picture-form">
+    <input type="file" id="solutionFile" name="solutionFile" accept="image/*" style="display: none;" onchange="displayImage(this)">
+    <label for="solutionFile" class="btn btn-primary">Upload Picture</label>
+    <button type="submit" class="btn btn-success">Save Picture</button>
+  </form>
+
   <h2 th:text="'Name ' + ${student.firstName} + ' ' + ${student.lastName}">Student Name </h2>
   <p th:text="'Username: ' + ${student.username}">Username: </p>
   <p th:text="'Email: ' + ${student.email}">Email: </p>
   <h3>Courses:</h3>
   <ul>
-    <li th:each="course : ${student.courses}" th:text="${course.name}"></li>
+    <li th:each="enrollment : ${student.enrollments}" th:text="${enrollment.course.name}"></li>
   </ul>
-  <p sec:authorize="hasRole('ROLE_TEACHER')" th:if="${student.averageGrade} < 3" th:text="'Average grade: ' + ${student.averageGrade}" class="incomplete-label">Average Grade: </p>
-  <p sec:authorize="hasRole('ROLE_TEACHER')" th:unless="${student.averageGrade} < 3" th:text="'Average grade: ' + ${student.averageGrade}" class="completed-label">Average Grade: </p>
+  <p sec:authorize="hasRole('ROLE_TEACHER')" th:if="${student.averageGrade} < 3 and ${student.isStudent()}" th:text="'Average grade: ' + ${student.averageGrade}" class="incomplete-label">Average Grade: </p>
+  <p sec:authorize="hasRole('ROLE_TEACHER')" th:unless="${student.averageGrade} < 3 or ${!student.isStudent()}" th:text="'Average grade: ' + ${student.averageGrade}" class="completed-label">Average Grade: </p>
   <a  th:href="@{/students/{id}/courses(id=${student.id})}" class="task-button mb-3 mt-3">View Courses Full info</a>
   <a sec:authorize="hasRole('ROLE_TEACHER')" th:href="@{/students/{id}/tasks(id=${student.id})}" class="task-button mb-3 mt-3">View Tasks</a>
 </div>
-  <a sec:authorize="hasRole('ROLE_TEACHER')"  style="color: white; background-color: red; border-color: red" th:href="@{/students/{id}/make-teacher(id=${student.id})}" class="btn btn-primary mb-3 mt-3">Make Teacher</a>
+  <a sec:authorize="hasRole('ROLE_TEACHER')" th:if="${student.isStudent()}" style="color: white; background-color: red; border-color: red" th:href="@{/students/{id}/make-teacher(id=${student.id})}" class="btn btn-primary mb-3 mt-3">Make Teacher</a>
 
 
 </div>
