--- a/src/main/resources/templates/enquiry-add.html
+++ b/src/main/resources/templates/enquiry-add.html
@@ -14,13 +14,24 @@
       th:action="@{/enquiries/{id}/add(id=${studentId})}"
       th:object = "${enquiryAddBindingModel}"
       method="post">
+
+
+
   <div class="label-holder textCol d-flex justify-content-center">
-    <label class="h4 mb-2 text-white">Question</label>
+    <p th:if="${invalidInput}" th:text="${invalidInput}" class="errors alert alert-danger">
+      Invalid id provided.
+    </p>
+
   </div>
+
+  <label class="h4 mb-2 text-white">Question</label>
   <div class="text-center">
     <input type="text" th:field = "*{question}"
            placeholder="Enter your question here"
-           class="form-control mb-4 col-12 mx-auto ">
+           class="form-control mb-4 col-12 mx-auto "th:errorclass="bg-danger">
+    <small th:if="${#fields.hasErrors('question')}"
+           th:errors="*{question}"
+           class="text-danger" >Question error message</small>
   </div>
 
   <div class="label-holder textCol d-flex justify-content-center">
