--- a/src/main/resources/templates/resource-add.html
+++ b/src/main/resources/templates/resource-add.html
@@ -27,19 +27,30 @@
       <div class="form-group">
         <input type="text" th:field="*{title}"
                placeholder="Enter title"
-               class="form-control mb-4">
+               class="form-control mb-4"th:errorclass="bg-danger"/>
+        <small th:if="${#fields.hasErrors('title')}"
+               th:errors="*{title}"
+               class="text-danger">Title error message</small>
       </div>
 
       <div class="form-group">
         <input type="text" th:field="*{description}"
                placeholder="Enter description"
-               class="form-control mb-4">
+               class="form-control mb-4"
+               th:errorclass="bg-danger"/>
+        <small th:if="${#fields.hasErrors('description')}"
+               th:errors="*{description}"
+               class="text-danger">Description error message</small>
       </div>
 
       <div class="form-group">
         <input type="text" th:field="*{videoUrl}"
                placeholder="Enter video Id"
-               class="form-control mb-4">
+               class="form-control mb-4"
+               th:errorclass="bg-danger"/>
+        <small th:if="${#fields.hasErrors('videoUrl')}"
+               th:errors="*{videoUrl}"
+               class="text-danger">Video URL error message</small>
       </div>
 
       <button type="submit" class="btn btn-primary" value="Upload">Upload resource</button>
