--- a/src/main/resources/templates/course-users.html
+++ b/src/main/resources/templates/course-users.html
@@ -13,7 +13,7 @@
   <hr>
   <h2 th:text="${course.description}"></h2>
   <hr>
-<h3>Students in this course:</h3>
+<h3>Participants in this course:</h3>
 
   <table>
     <thead>
